kubernetes/main/apps/transmission/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transmission
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  selector:
    matchLabels:
      app: transmission
  template:
    metadata:
      labels:
        app: transmission
    spec:
      dnsConfig:
        options:
          - name: ndots
            value: "2"
      securityContext:
        fsGroup: 988
        fsGroupChangePolicy: "OnRootMismatch"
      volumes:
        - name: transmission
          persistentVolumeClaim:
            claimName: transmission
        - name: runtime
          emptyDir:
            medium: Memory
      containers:
        - name: transmission
          image: lscr.io/linuxserver/transmission:4.0.6-r4-ls320
          imagePullPolicy: Always
          securityContext:
            runAsUser: 1001
            runAsGroup: 988
            runAsNonRoot: true
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              memory: 256Mi
          ports:
            - name: http
              protocol: TCP
              containerPort: 9091
          volumeMounts:
            - name: transmission
              mountPath: /config
              subPath: config
            - name: transmission
              mountPath: /downloads
              subPath: downloads
            - name: runtime
              mountPath: /run
