kubernetes/main/apps/transmission/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: transmission
  name: transmission
spec:
  type: LoadBalancer
  ports:
    - name: http
      protocol: TCP
      port: 9091
      targetPort: http
  selector:
    app: transmission
