kubernetes/main/apps/transmission/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: transmission
  namespace: transmission
  annotations:
    external-dns.alpha.kubernetes.io/target: ip.nidr0x.win
spec:
  parentRefs:
    - name: external
      namespace: gateway
      sectionName: https-gateway
    - name: internal
      namespace: gateway
      sectionName: https-gateway
  hostnames:
    - "transmission.nidr0x.win"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: transmission
          port: 9091
